--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 #  - travis_wait 30 conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION uvcdat configobj paramiko xlutils seawater pytz cmocean basemap-data-hires matplotlib>=2.0 scipy
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION cdms2 cdutil genutil esmpy fortran-compiler configobj paramiko xlutils seawater pytz cmocean basemap-data-hires matplotlib>=2.0 scipy
   - source activate test-environment
-  - python setup.py install
+  - LDFLAGS="-shared" python setup.py install
   - LDFLAGS="-shared" python setup.py build_ext --inplace
   - export UVCDAT_ANONYMOUS_LOG=no
 
