--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ language: python
 python:
   - "2.7"
   - "3.6"
-addons:
-  apt:
-    packages:
-    - gfortran
 install:
   - sudo apt-get update
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
@@ -19,7 +15,7 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - conda create -q -n test-environment -c conda-forge -c defaults --override-channels python=$TRAVIS_PYTHON_VERSION cdms2 cdutil genutil esmpy configobj paramiko xlutils seawater pytz cmocean basemap-data-hires matplotlib scipy pytest
+  - conda create -q -n test-environment -c conda-forge -c defaults --override-channels python=$TRAVIS_PYTHON_VERSION fortran-compiler cdms2 cdutil genutil esmpy configobj paramiko xlutils seawater pytz cmocean basemap-data-hires matplotlib scipy pytest
   - source activate test-environment
   - python setup.py build_ext --inplace
   - python setup.py install
